--- a/app/assets/javascripts/benchmark/form.html
+++ b/app/assets/javascripts/benchmark/form.html
@@ -84,7 +84,7 @@
                             </div>
                         </label>
                     </div>
-                    <div class="eleven wide column" ng-if="auxModel.country==='United States'  && auxModel.approach === 'prescriptive' || auxModel.country==='Canada' && auxModel.approach === 'prescriptive'">
+                    <div class="eleven wide column" ng-if="auxModel.approach === 'prescriptive'">
                         <div class="inline fields required">
                             <div class="sixteen wide field">
                                 <select class="ui dropdown search"
@@ -97,7 +97,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="eleven wide column" ng-if="auxModel.country!=='United States' && auxModel.country!=='Canada' && auxModel.approach === 'prescriptive'">
+                    <div class="five wide column" ng-if="auxModel.approach === 'prescriptive'">
+                        <label class="design-label">Climate Zone
+                            <div class="tooltip">
+                                <sup><i class="blue circle info icon"></i></sup>
+                                <span class="tooltiptext">Select a Title 24 Climate Zone.</span>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="eleven wide column" ng-if="auxModel.approach === 'prescriptive'">
+                        <div class="inline fields required">
+                            <div class="sixteen wide field">
+                                <select class="ui dropdown search"
+                                        ng-model="auxModel.climate_zone"
+                                        ng-options="zone for zone in geographicProperties.climate_zone"
+                                        name="climate_zone">
+                                    <option value="">Select</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+<!--                    <div class="eleven wide column" ng-if="auxModel.country!=='United States' && auxModel.country!=='Canada' && auxModel.approach === 'prescriptive'">
                         <div class="inline fields required">
                             <div class="sixteen wide field">
                                 <select class="ui dropdown search"
@@ -109,7 +129,7 @@
                                 </select>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="five wide column" ng-if="auxModel.approach === 'prescriptive'">
                         <label class="design-label">Number of Stories</label>
                     </div>
