--- a/app/assets/javascripts/benchmark/benchmark_result.html
+++ b/app/assets/javascripts/benchmark/benchmark_result.html
@@ -64,7 +64,20 @@
         </div>
 
         <div class="sixteen wide column" style="padding-left:20px; padding-right:20px; padding-bottom:10px; background-color:white;" ng-if="prescriptiveRequirements && endUses && showBar===true  && auxModel.approach === 'prescriptive'">
-            <div bar prescriptive-requirements="prescriptiveRequirements" end-uses="endUses" units="tableEUIUnits" style="width: 100%;"></div>
+			<div class="right aligned eleven wide column">
+				<label class="design-label">Metric</label>
+				<div class="inline fields">
+					<div class="eight wide field">
+						<select class="ui dropdown search"
+								ng-model="auxModel.prescriptive_resource"
+								ng-options="item.id as item.name for item in prescriptiveResource"
+								name="state">
+							<option value="">Select</option>
+						</select>
+					</div>
+				</div>
+			</div>
+			<div bar prescriptive-requirements="prescriptiveRequirements" end-uses="endUses" units="tableEUIUnits" style="width: 100%;"></div>
 			<p style="font-size:10px;">Building Energy Consumption and End Uses are based on a <b>code compliant prototype building</b>
 				modeled by Pacific Northwest National Laboratory. Actual building energy consumption will vary from modeled results.</p>
 		</div>
