--- a/app/assets/javascripts/benchmark/energy_result.html
+++ b/app/assets/javascripts/benchmark/energy_result.html
@@ -26,7 +26,7 @@
     </tr>
 
     <tr class="top aligned">
-        <td class="onespace"><b>  Estimated Building Energy Consumption  </b></td>
+        <td class="onespace"><b>  Estimated Building Source Energy Consumption  </b></td>
         <td class = "center"><b> {{buildingRequirements.building_energy_norm | number: 1}} </b></td>
         <td class = "center "><b>{{buildingRequirements.building_energy | number: 1}}</b></td>
     </tr>
