prescriptive files and lists updated

--- a/app/assets/javascripts/benchmark/about.html
+++ b/app/assets/javascripts/benchmark/about.html
@@ -14,7 +14,7 @@
              <a href="http://architecture2030.org/">Architecture 2030</a>
             developed The ZERO Code - an international zero-net-carbon building code
             that applies to commercial, institutional, and
-            mid- to high-rise residential buildings, the prevalent building types
+            mid- to high-rise buildings, the prevalent building types
             being constructed in cities today. Maalka developed the Energy Calculator
             to calculate the potential offset of on-site solar and RECs required
             for buildings to achieve zero-net-carbon.
