return doubles from file parser

--- a/app/assets/javascripts/benchmark/form.html
+++ b/app/assets/javascripts/benchmark/form.html
@@ -40,7 +40,7 @@
                         <div class="ui divider"></div>
                     </div>
 
-                    <files ng-if="auxModel.approach === 'performance'"></files>
+                    <files ng-if="auxModel.approach === 'performance'" data="csvData"></files>
 
                     <div class="five wide column" ng-if="auxModel.approach === 'prescriptive'">
                         <label class="design-label">Climate Zone
