--- a/app/assets/javascripts/benchmark/form.html
+++ b/app/assets/javascripts/benchmark/form.html
@@ -40,7 +40,17 @@
                         <div class="ui divider"></div>
                     </div>
 
-                    <files ng-if="auxModel.approach === 'performance'" data="csvData"></files>
+                    <div ng-if="auxModel.approach === 'performance'">
+
+                        <div files data="csvData"></div>
+
+                    </div>
+
+                    <div class="fifteen wide column right aligned">
+                        <h3 class="ui header" style="padding-top: 1px;">
+                            <a href class="drop" ng-click="testsubmit()">Test</a>
+                        </h3>
+                    </div>
 
                     <div class="five wide column" ng-if="auxModel.approach === 'prescriptive'">
                         <label class="design-label">Climate Zone
@@ -99,13 +109,13 @@
                     </div>
                 </div>
 
-                <div ng-if="propTypes.length > 0">
+                <div ng-if="propTypes.length > 0 && auxModel.approach === 'prescriptive'">
                     <div class="ui divider "></div>
                     <div class="field">
                         <label >Selected Use Type(s):</label>
                     </div>
                 </div>
-                <div class="field" ng-repeat="prop in propTypes">
+                <div class="field" ng-if="auxModel.approach === 'prescriptive'" ng-repeat="prop in propTypes">
                     <select class="ui dropdown search"
                             dropdown
                             ng-model="prop.changeTo"
@@ -116,7 +126,7 @@
                 </div>
             </div>
 
-            <div ng-repeat="prop in propTypes" ng-class="{'page-break-after': ($index + 1) % 3 == 0}">
+            <div ng-repeat="prop in propTypes" ng-if="auxModel.approach === 'prescriptive'" ng-class="{'page-break-after': ($index + 1) % 3 == 0}">
                 <div class="ui segment building">
                     <div building-Info forms='forms' type='Generic' model="prop"></div>
                 </div>
