--- a/app/assets/javascripts/benchmark/form.html
+++ b/app/assets/javascripts/benchmark/form.html
@@ -46,9 +46,9 @@
 
                     </div>
 
-                    <div class="fifteen wide column right aligned">
+                    <div class="fifteen wide column right aligned" ng-if="auxModel.approach === 'performance'">
                         <h3 class="ui header" style="padding-top: 1px;">
-                            <a href class="drop" ng-click="testsubmit()">Test</a>
+                            <a href class="drop" ng-click="testsubmit()">Process CSV</a>
                         </h3>
                     </div>
 
