--- a/app/assets/javascripts/benchmark/form.html
+++ b/app/assets/javascripts/benchmark/form.html
@@ -40,7 +40,7 @@
                         <div class="ui divider"></div>
                     </div>
 
-                    <div ng-show="auxModel.approach === 'performance'">
+                    <div  class="sixteen wide column" ng-show="auxModel.approach === 'performance'">
 
                         <div files data="csvData"></div>
 
