--- a/app/assets/javascripts/benchmark/performance_result.html
+++ b/app/assets/javascripts/benchmark/performance_result.html
@@ -4,9 +4,10 @@
     <tr>
         <td class="halfspace">{{prescriptiveTableIntensityText}} <b>{{endUses.eui | number: 2}}</b>&nbsp;&nbsp;{{prescriptiveTableIntensityUnits}}</td>
     </tr>
-    <!--<tr>-->
-        <!--<td class="halfspace">{{prescriptiveTableResourceText}} <b>{{endUses.energy | number: 2}}&nbsp;&nbsp;</b>{{prescriptiveTableUnits}}</td></td>-->
-    <!--</tr>-->
+    <tr>
+        <td class="halfspace">{{prescriptiveTableResourceText}} <b>{{endUses.energy | number: 2}}&nbsp;&nbsp;</b>{{prescriptiveTableUnits}}</td></td>
+    </tr>
+
     </tbody>
 </table>
 
