--- a/app/assets/javascripts/benchmark/benchmark.html
+++ b/app/assets/javascripts/benchmark/benchmark.html
@@ -11,7 +11,8 @@
                 <div class="ui sixteen wide grid">
                         <div class="fifteen wide column right aligned">
                             <h3 class="ui header" style="padding-top: 1px;">
-                                <a href class="drop" ng-click="submit()">Generate Results</a>
+                                <a href class="drop" ng-click="submit()" ng-if="auxModel.approach==='prescriptive'">Generate Results</a>
+                                <a href class="drop" ng-click="submit()" ng-if="auxModel.approach==='performance'">Display Results</a>
                             </h3>
                         </div>
                         <div class="one wide column">
