total source energy table

--- a/app/assets/javascripts/benchmark/performance_source_result.html
+++ b/app/assets/javascripts/benchmark/performance_source_result.html
@@ -27,8 +27,8 @@
 
     <tr class="top aligned">
         <td class="onespace"><b> Estimated Building Source Energy Consumption  </b></td>
-        <td class = "center"><b> {{buildingRequirements.building_carbon_norm | number: 1}} </b></td>
-        <td class = "center "><b>{{buildingRequirements.building_carbon | number: 1}}</b></td>
+        <td class = "center"><b> {{buildingRequirements.building_source_norm | number: 1}} </b></td>
+        <td class = "center "><b>{{buildingRequirements.building_source | number: 1}}</b></td>
     </tr>
 
     <tr class="top aligned">
