--- a/app/assets/javascripts/benchmark/benchmark_result.html
+++ b/app/assets/javascripts/benchmark/benchmark_result.html
@@ -136,7 +136,7 @@
 				REQUIREMENTS FOR REACHING ZERO NET CARBON</h3>
 	    </div>
 	    <div class="fifteen wide column" ng-if="!buildingRequirements && !solarResults && auxModel.approach==='performance'">
-    		<h3 class="ui header">UPLOAD YOUR PERFORMANCE MODEL (.CSV) TO THE LEFT TO GENERATE
+    		<h3 class="ui header">UPLOAD YOUR CBECC-COM RESULTS (.CSV) TO THE LEFT TO GENERATE
 				REQUIREMENTS FOR REACHING ZERO NET CARBON</h3>
 	    </div>
 	</div>
