--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -25,6 +25,7 @@
         </div>
 
 
+
         <div class="sixteen wide column" style="padding-left:20px; padding-right:20px; padding-bottom:10px; background-color:white;" ng-if="endUses">
 
 
@@ -46,6 +47,8 @@
 					</div>
 
 				</div>
+
+				{{endUses}}
 
 			</div>
 
