--- a/app/assets/javascripts/benchmark/header.html
+++ b/app/assets/javascripts/benchmark/header.html
@@ -2,25 +2,25 @@
 <div style="background:black;padding-top:14px;margin-bottom:14px">
   <div class="ui stackable grid container">
       <div class="three wide column only print"> 
-          <img src="/assets/images/2030logo.png" style="position:absolute;left: -10px;z-index:9999">
+          <img src="/assets/images/maalka_city.png" style="position:absolute;left: -10px;z-index:9999">
       </div>
 
       <div class="two wide column computer only tablet only non printable">
-          <img src="/assets/images/2030logo.png" style="position:absolute;left: -10px;z-index:9999">
+          <img src="/assets/images/maalka_city.png" style="position:absolute;left: -10px;z-index:9999">
       </div>
 
       <div class="two wide column mobile only non printable">
-          <img src="/assets/images/2030logo.png" class="ui image floated left">
-             <h1 class="ui inverted huge header">ZERO ENERGY RATING & TARGET TOOL</h1>
+          <img src="/assets/images/maalka_city.png" class="ui image floated left">
+             <h1 class="ui inverted huge header">Municipal Codes Assessment Tool</h1>
       </div>
       <div class="black nine wide column small screen only non printable" style="padding-top:0;padding-bottom:0">
           <h1 class="ui inverted huge header" style="position:absolute;bottom:-7px">
-             ZERO ENERGY RATING & TARGET TOOL
+              Municipal Codes Assessment Tool
           </h1>
       </div>
       <div class="black seven wide column large screen only non printable" style="padding-top:0;padding-bottom:0">
           <h1 class="ui inverted huge header" style="position:absolute;bottom:-7px">
-             ZERO ENERGY RATING & TARGET TOOL
+              Municipal Codes Assessment Tool
           </h1>
       </div>
        <div class="black five wide column non printable" style="padding-top:0;padding-bottom:0">
@@ -37,13 +37,12 @@
       <!-- print header -->
       <div class="black eight wide column only print" style="padding-top:0;padding-bottom:0">
           <h1 class="ui inverted huge header" style="position:absolute;bottom:-6px">
-             ZERO ENERGY RATING & TARGET TOOL
+             Municipal Codes Assessment Tool
           </h1>
       </div>
        <div class="black five wide column only print" style="padding-top:0;padding-bottom:0">
           <div class="ui text inverted fluid four item menu">
               <a class="item">home</a>
-              <a class="item">bulk</a>
               <a class="item">user guide</a>
               <a class="item">about</a>
           </div>
