Fixed styles for "CSV Upload" section

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -5,7 +5,7 @@
 		<div class="five wide column">
 			<div class="field">
 				<h2 class="ui dividing header">
-                <i class="maalka-blue bar chart icon" style="font-size:25px;"></i>Results
+                <i class="maalka-blue signal icon" style="font-size:25px;"></i>Results
             	</h2>
 			</div>
 		</div>
