--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -40,8 +40,8 @@
 					<div class="inline fields">
 						<div class="sixteen wide field">
 							<select class="ui dropdown"
-									ng-model="auxModel.prescriptive_resource"
-									ng-options="item.id as item.name for item in prescriptiveResource"
+									ng-model="scenario"
+									ng-options="item.id as item.name for item in scenarios"
 									name="resource">
 								<option value="">Select</option>
 							</select>
