inserted a default graph

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -1,6 +1,6 @@
+
+
 <div>
-
-
 	<div class="ui grid" style="margin-bottom:7px;margin-top:5px;">
 		<div class="five wide column">
 			<div class="field">
@@ -47,8 +47,15 @@
 					</div>
 
 				</div>
+				<!-- !-->
+				<!-- passing in attribute endUses with data "endUses"!-->
 
-				{{endUses}}
+
+				<bar ng-style="myStyle" chart="chartOptions" data="endUses" options="auxModel" >
+
+				</bar>
+
+
 
 			</div>
 
