Filtering based on energy type

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -61,7 +61,8 @@
 
 
 			<div class="ui sixteen wide grid">
-				<bar ng-style="myStyle" chart="chartOptions" data="endUses" options="auxModel" >
+
+				<bar ng-style="myStyle" data="endUseProps" >
 				</bar>
 			</div>
 
