--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -57,18 +57,21 @@
 
 
 
-        <div class="sixteen wide column" style="padding-left:20px; padding-right:20px; padding-bottom:10px; background-color:white;">
+        <div class="eight wide column" style="padding-left:20px; padding-right:20px; padding-bottom:10px; background-color:white;">
+
+			<bar ng-style="myStyle"  data="endUses" options="barOptions.energy"></bar>
 
 
-			<div class="ui sixteen wide grid">
-				<bar ng-style="myStyle" chart="chartOptions" data="endUses" options="auxModel" >
-				</bar>
-			</div>
+		</div>
+
+		<div class="eight wide column">
+
+			<bar ng-style="myStyle" data="endUses" options="barOptions.eui"></bar>
 
 		</div>
 
 
-	</div>
+
 	<div>
 		<div class="ui basic horizontal segments">
 			<div class="ui basic segment right aligned">
