sorting by building returns consistent object

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -62,9 +62,9 @@
 
 			<div class="ui sixteen wide grid">
 
-				<bar ng-style="myStyle" data="endUseProps" >
+				<bar ng-style="myStyle" data="endUseProps" options="endUseProps" title="endUseProps" >
 				</bar>
-			
+
 			</div>
 
 		</div>
