split graph implemented, sorts by building group then by highest average energy within group

--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -59,14 +59,12 @@
 
         <div class="eight wide column" style="padding-left:20px; padding-right:20px; padding-bottom:10px; background-color:white;">
 
-			<bar ng-style="myStyle"  data="endUses" options="barOptions.energy"></bar>
-
+			<bar ng-style="myStyle" data="euiSeries"  categories="catergories" options="barOptions.energy"></bar>
 
 		</div>
 
 		<div class="eight wide column">
-
-			<bar ng-style="myStyle" data="endUses" options="barOptions.eui"></bar>
+			<bar ng-style="myStyle" data="energySeries" categories="catergories" options="barOptions.eui"></bar>
 
 		</div>
 
