--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -55,14 +55,9 @@
             </div>
         </div>
 
-
-
-        <div class="eight wide column" style="padding-left:20px; padding-right:20px; padding-bottom:10px; background-color:white;">
-
+  	<div class="eight wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
 			<bar ng-style="myStyle" data="energySeries" categories="catergories" options="barOptions.energy"></bar>
-
 		</div>
-
 		<div class="eight wide column">
 			<bar ng-style="myStyle" data="euiSeries" categories="catergories"  options="barOptions.eui"></bar>
 
