--- a/app/assets/javascripts/benchmark/analysis_result.html
+++ b/app/assets/javascripts/benchmark/analysis_result.html
@@ -60,15 +60,35 @@
                 </div>
             </div>
         </div>
-	  <div class="row" style="padding-top:0.1em;padding-left:5.5em;;">	<div class="ui small header" style="text-transform:none;letter-spacing: 0.02em;">Portfolio Energy: <span style="font-size:1em">{{portfolioEnergy}}</span><span style="text-transform:none;"> kBtu</span></div></div>
-		<div class="row" style="padding-top:0.1em;padding-left:5.5em;">	<div class="ui small header"style="text-transform:none;letter-spacing: 0.02em;">Portfolio Eui: <span style="font-size:1em">{{portfolioEui}}</span><span style="text-transform:none;"> kBtu/ft<sup>2</sup></span></div></div>
-  	<div class="eight wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
-			<bar ng-style="myStyle" data="energySeries" categories="catergories" options="barOptions.energy"></bar>
-		</div>
-		<div class="eight wide column">
+		<div class="seven wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
+			<div class="row" style="padding-top:0.1em;padding-left:5em;;">
+				<h2 class="ui dividing header">
+					Portfolio Energy:
+					<span style="font-size:1em">{{portfolioEnergy / 1000  | number : 2}}</span>
+					<span style="text-transform:none;">MBtu</span>
+				</h2>
 
-			<bar ng-style="myStyle" data="euiSeries" categories="catergories"  options="barOptions.eui"></bar>
-
+			</div>
 		</div>
+		<div class="seven wide column">
+			<div class="row" style="padding-top:0.1em;padding-left:1.5em;">
+				<h2 class="ui dividing header">
+					Portfolio EUI:
+					<span style="font-size:1em">{{portfolioEui | number : 2}}</span>
+					<span style="text-transform:none;"> kBtu/ft<sup>2</sup></span>
+				</h2>
+			</div>
+		</div>
+
+  	<div class="seven wide column" style="padding-left:20px; padding-right:20px; background-color:white;">
+
+		<bar ng-style="myStyle" data="energySeries" categories="catergories" options="barOptions.energy"></bar>
+
+	</div>
+	<div class="seven wide column">
+
+		<bar ng-style="myStyle" data="euiSeries" categories="catergories"  options="barOptions.eui"></bar>
+
+	</div>
 
 </div>
